welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:3: error: ')' expected but 'if' found.
    case ((i, j, k) if (i < 10 + j) | (j < 10 + k) | (k < 10 + i)) => return true
                    ^lessBy10:3: error: '=>' expected but ')' found.
    case ((i, j, k) if (i < 10 + j) | (j < 10 + k) | (k < 10 + i)) => return true
                                                                 ^